fix: allow all origins in CorsWebFilter (server-to-server)